--- a/style.css
+++ b/style.css
@@ -30,6 +30,86 @@ Material Design Icons
     margin-right: .5%
 }
 
-.flex-nav {
-    display: flex;
+/*
+* Isotope
+*/
+{ box-sizing: border-box; }
+
+/* force scrollbar, prevents initial gap */
+html {
+  overflow-y: scroll; 
 }
+/* ---- isotope ---- */
+
+.grid {
+    background-color: #0d47a1;
+    margin-top: 2%;
+    margin-bottom: 1%;
+}
+
+/* clear fix */
+.grid:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+/* ---- .element-item ---- */
+
+/* 5 columns, percentage width */
+.element-item,
+.grid-sizer {
+  width: 20%;
+}
+/* ---- .element-item ---- */
+
+.element-item {
+  position: relative;
+  float: left;
+  width: 10%;
+  height: 10%;
+  margin: 1%;
+  padding: 5%;
+  background: white;
+  color: #262524;
+}
+
+.element-item > * {
+  margin: 0;
+  padding: 0;
+}
+
+.element-item .name {
+  position: absolute;
+
+  left: 10%;
+  top: 25%;
+  font-size: 1vw;
+  text-transform: none;
+  letter-spacing: 0;
+  font-weight: normal;
+}
+
+.element-item .date-taken {
+  position: absolute;
+  left: 5%;
+  top: 2%;
+  font-size: .5vw;
+  font-weight: bold;
+}
+
+.element-item .course-number {
+  position: absolute;
+  font-size: .5vw;
+  right: 5%;
+  top: 2%;
+}
+
+.element-item .location {
+  position: absolute;
+  left: 15%;
+  top: 70%;
+  font-size: .75vw;
+}
+
+
