--- a/testcss.css
+++ b/testcss.css
@@ -1,36 +1,3 @@
-@charset "UTF-8";
-.container {
-  padding-left: 3.5%;
-  padding-right: 3.5%; }
-  .container::before, .container::after {
-    content: " ";
-    display: table; }
-  .container::after {
-    clear: both; }
-
-.row {
-  margin-left: auto;
-  margin-right: auto; }
-  .row::before, .row::after {
-    content: " ";
-    display: table; }
-  .row::after {
-    clear: both; }
-  .row .row {
-    margin-left: -8px;
-    margin-right: -8px; }
-  .row--centered {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center; }
 
 .aspect {
   position: relative;
@@ -342,166 +309,6 @@
     margin-left: 91.66667%; }
   .col-offset-12\@sm {
     margin-left: 100%; }
-  .container {
-    padding-left: 7%;
-    padding-right: 7%; }
-  .row {
-    max-width: 1200px; } }
-.demo-list .figure-wrap,
-.demo-list .figure-wrap img {
-  -webkit-transform: translateZ(0);
-          transform: translateZ(0);
-  -webkit-transition: .1s ease;
-  transition: .1s ease; }
-
-.demo-list:hover .figure-wrap {
-  -webkit-transform: scale3d(1, 1, 1);
-          transform: scale3d(1, 1, 1); }
-  .demo-list:hover .figure-wrap img {
-    -webkit-filter: grayscale(1);
-            filter: grayscale(1); }
-
-.demo-list:hover .figure-wrap:hover {
-  z-index: 2;
-  -webkit-transform: scale3d(1.05, 1.05, 1);
-          transform: scale3d(1.05, 1.05, 1); }
-  .demo-list:hover .figure-wrap:hover img {
-    -webkit-filter: none;
-            filter: none; }
-
-.demo-list .figure-wrap:nth-child(4n + 1) {
-  margin-left: 0; }
-
-.demo-list .figure-wrap > a {
-  display: block; }
-
-.demo-list .figure-wrap figcaption {
-  margin-top: .5em;
-  margin-bottom: 1em; }
-
-.demo-link-container::before {
-  content: '➜';
-  color: #2ECC71;
-  margin-right: 5px; }
-
-span.demo-link-container::before {
-  margin-left: 5px; }
-
-@media screen and (max-width: 47.9375em) {
-  .demo-list + .demo-list {
-    margin-top: 1em; }
-  .figure-wrap:nth-child(odd) {
-    margin-left: 0; }
-  .figure-wrap:nth-child(n + 3) {
-    margin-top: 1em; } }
-
-.search-section {
-  margin-top: 1em;
-  margin-bottom: 1em; }
-
-input.faq-search {
-  -webkit-appearance: searchfield;
-  box-sizing: border-box;
-  width: 100%;
-  border: 2px solid #95A5A6;
-  border-radius: 4px;
-  padding: 0.5em;
-  font-size: 1.125em;
-  color: #95A5A6;
-  -webkit-transition: .15s;
-  transition: .15s; }
-  input.faq-search::-webkit-input-placeholder {
-    color: #95A5A6;
-    -webkit-transition: .15s;
-    transition: .15s; }
-  input.faq-search::-moz-placeholder {
-    color: #95A5A6;
-    -webkit-transition: .15s;
-    transition: .15s; }
-  input.faq-search:-ms-input-placeholder {
-    color: #95A5A6;
-    -webkit-transition: .15s;
-    transition: .15s; }
-  input.faq-search::placeholder {
-    color: #95A5A6;
-    -webkit-transition: .15s;
-    transition: .15s; }
-  input.faq-search:hover {
-    outline: 0;
-    color: #5D6D77;
-    border-color: #5D6D77; }
-    input.faq-search:hover::-webkit-input-placeholder {
-      color: #5D6D77; }
-    input.faq-search:hover::-moz-placeholder {
-      color: #5D6D77; }
-    input.faq-search:hover:-ms-input-placeholder {
-      color: #5D6D77; }
-    input.faq-search:hover::placeholder {
-      color: #5D6D77; }
-  input.faq-search:focus {
-    outline: 0;
-    color: #27AE60;
-    border-color: #27AE60; }
-    input.faq-search:focus::-webkit-input-placeholder {
-      color: #27AE60; }
-    input.faq-search:focus::-moz-placeholder {
-      color: #27AE60; }
-    input.faq-search:focus:-ms-input-placeholder {
-      color: #27AE60; }
-    input.faq-search:focus::placeholder {
-      color: #27AE60; }
-
-
-
-
-.text-center {
-  text-align: center; }
-
-.ib {
-  display: inline-block; }
-
-@media screen and (max-width: 767px) {
-  .hidden\@xs {
-    display: none; } }
-
-.hidden {
-  display: none !important;
-  visibility: hidden; }
-
-.visuallyhidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px; }
-
-.clearfix,
-.clearfix::after {
-  content: " ";
-  display: table;
-  clear: both; }
-
-.pull-left {
-  float: left; }
-
-.pull-right {
-  float: right; }
-
-.full-width {
-  width: 100%; }
-
-.full-height {
-  height: 100%; }
-
-.hide-text {
-  font: 0/0 a;
-  color: transparent;
-  text-shadow: none;
-  background-color: transparent;
-  border: 0; }
 
 .table-center-wrap {
   display: table;
@@ -530,43 +337,12 @@ input.faq-search {
   overflow: hidden; }
 
 
-/* -- Element Stuff -- */
-
-
-.element {
-  position: relative;
-  width: 10%;
-  height: 10%;
-  margin: 1%;
-  padding: 5%;
-  background: black;
-  color: white;
-}
-
-.shape > * {
-  margin: 0;
-  padding: 0;
-}
-
-.element .type {
-  position: absolute;
-  font-size: .5vw;
-  right: 5%;
-  top: 2%;
-}
-
-.element .data-color {
-  position: absolute;
-  left: 15%;
-  top: 70%;
-  font-size: .75vw;
-}
-
 .card {
     margin-bottom: 1%;
-    margin-right: 1%;
+    margin-right: 1px;
 
     
 }
+
 
 
