--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ Material Design Icons
 .material-icons.md-24 { font-size: 24px; color:white}
 .material-icons.md-36 { font-size: 36px; color:white}
 .material-icons.md-48 { font-size: 48px; color:white}
+.devicon-github-plain path {float:right; fill:#bbdefb}
  /*
 * Background
 */
